# fracc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in  main.cpp  rebuild.sh
src/: CMakeLists.txt  ColourMapBase.h  ComputationWidget.py  FraccWindow.cpp  FraccWindow.h  LinearColourMap.cpp  LinearColourMap.h  MainWindow.py  Mandelbrot.cpp  Mandelbrot.h  MandelbrotTests.cpp  compute.h  fracc.py  gen_ui.py  logging.ini  main.cpp  mandelbrot.h
src/Algorithms/: mandelbrot.c  mandelbrot_kernel.cl  mandelbrot_test.py
src/Interface/: AlgorithmControlWidget.py  Communicate.py  DisplayWidget.py  MainWindow.py  RenderControlWidget.py
src/Interface/UI/: AlgorithmControlWidgetUI.ui  MainWindowUI.ui  RenderControlWidgetUI.ui
src/cli/: CMakeLists.txt  main.cpp
src/experimental/: CMakeLists.txt  MandelbrotTests.h
src/os/linux/: CMakeLists.txt
src/os/macos/: CMakeLists.txt
src/os/windows/: CMakeLists.txt
src/ui/: ComputationWidgetUI.ui  MainWindowUI.ui
src/utils/: LoadUI.py
